data: cleaned the crime data set

--- a/chicago.ipynb
+++ b/chicago.ipynb
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -3170,13 +3170,33 @@
        "[9051 rows x 26 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "homicide"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9051"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "homicide.shape[0]"
    ]
   },
   {
@@ -3477,6 +3497,87 @@
    ],
    "source": [
     "homicide.groupby('WeekDay').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1438       28.0\n",
+       "1445       22.0\n",
+       "1450        NaN\n",
+       "1457        NaN\n",
+       "1468        NaN\n",
+       "1476       31.0\n",
+       "1485       53.0\n",
+       "1499       19.0\n",
+       "1507        NaN\n",
+       "1516        NaN\n",
+       "1526       46.0\n",
+       "1537        NaN\n",
+       "1544       14.0\n",
+       "1551       43.0\n",
+       "1558       43.0\n",
+       "1565        NaN\n",
+       "1570        NaN\n",
+       "1580        NaN\n",
+       "1589       25.0\n",
+       "1592       44.0\n",
+       "1597        6.0\n",
+       "1607       25.0\n",
+       "1610       73.0\n",
+       "1618        NaN\n",
+       "1622       61.0\n",
+       "1627       25.0\n",
+       "1632        NaN\n",
+       "1634       25.0\n",
+       "1640       16.0\n",
+       "1647       25.0\n",
+       "           ... \n",
+       "1447353    39.0\n",
+       "1447403    46.0\n",
+       "1447404    25.0\n",
+       "1447978    44.0\n",
+       "1447979    27.0\n",
+       "1448668    28.0\n",
+       "1450073    26.0\n",
+       "1450074    23.0\n",
+       "1451479     2.0\n",
+       "1451482    58.0\n",
+       "1451483    63.0\n",
+       "1452190    30.0\n",
+       "1452989    25.0\n",
+       "1452990    66.0\n",
+       "1452992    26.0\n",
+       "1453791    68.0\n",
+       "1453792    29.0\n",
+       "1453793    25.0\n",
+       "1454419    25.0\n",
+       "1454420    28.0\n",
+       "1455109    24.0\n",
+       "1455110    25.0\n",
+       "1455111    25.0\n",
+       "1455180    41.0\n",
+       "1455884    43.0\n",
+       "1455885    25.0\n",
+       "1456652    44.0\n",
+       "1456653    41.0\n",
+       "1456654    25.0\n",
+       "1456655    20.0\n",
+       "Name: Community Area, Length: 9051, dtype: float64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "homicide['Community Area']"
    ]
   },
   {
